Add new photo to gallery

--- a/index.html
+++ b/index.html
@@ -334,6 +334,21 @@
 					<div class="col-md-3">
 						<a href="img/elements/28img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/28img-little.jpg);"></div></a>
 					</div>
+					<div class="col-md-12">
+						<a href="img/elements/od1img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/od1img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/od2img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/od2img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/od3img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/od3img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/od4img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/od4img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-12">
+						<a href="img/elements/od5img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/od5img-little.jpg);"></div></a>
+					</div>
 				</div>
 				<h3>Abroad</h3>
 				<div class="row gallery-item">
@@ -346,6 +361,45 @@
 					</div>
 					<div class="col-md-12">
 						<a href="img/elements/31img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/31img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/adb1img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/adb1img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/adb2img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/adb2img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/adb3img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/adb3img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-12">
+						<a href="img/elements/adb4img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/adb4img-little.jpg);"></div></a>
+					</div>
+				</div>
+				<h3>Nature</h3>
+				<div class="row gallery-item">
+					<div class="col-md-6">
+						<a href="img/elements/nature1img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/nature1img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-6">
+						<a href="img/elements/nature2img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/nature2img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/nature3img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/nature3img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/nature4img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/nature4img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/nature5img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/nature5img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/nature6img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/nature6img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/nature7img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/nature7img-little.jpg);"></div></a>
+					</div>
+					<div class="col-md-4">
+						<a href="img/elements/nature8img-big.jpg" class="img-gal"><div class="single-gallery-image" style="background: url(img/elements/nature8img-little.jpg);"></div></a>
 					</div>
 				</div>
 		</div>
