--- a/commercial.html
+++ b/commercial.html
@@ -56,7 +56,7 @@
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
-						<li class=""><a class="active" href="#home">Personal</a></li>
+						<li class=""><a class="active" href="index.html">Personal</a></li>
 						<li><a href="commercial.html">Commercial</a></li>
 						<li><a href="price.html">Price</a></li>
 						<li><a href="contact.html">Contact</a></li>
@@ -70,7 +70,7 @@
 		<div class="container">
 		  <div class="row d-flex align-items-center justify-content-center">
 			<div class="about-content col-lg-12">
-			  <h1 class="text-white">Personal</h1>
+			  <h1 class="text-white">Commercial</h1>
 			  <p></p>
 			</div>
 		  </div>
@@ -78,7 +78,50 @@
 	  </section>
 	  <!-- End banner Area -->
 	  	
-	<section class="work-area section-gap-top" id="work">
+	<!--	<section class="service-area section-gap-top">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="section-title text-center">
+							<h3>Our Services</h3>
+							<h2><span>What We Offer</span></h2>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-4 col-md-6">
+						<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.0s">
+							<div class="d-flex align-items-center mb-3">
+								<i class="flaticon-shirt"></i>
+								<h4 class="ml-3">Fashion Photography</h4>
+							</div>
+							<p>An so vulgar to on points wanted. No rapturous resolving continued household northward gay he it otherwise</p>
+						</div>
+					</div>
+	
+					<div class="col-lg-4 col-md-6">
+						<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
+							<div class="d-flex align-items-center mb-3">
+								<i class="flaticon-water"></i>
+								<h4 class="ml-3">Nature Photgraphy</h4>
+							</div>
+							<p>An so vulgar to on points wanted. No rapturous resolving continued household northward gay he it otherwise</p>
+						</div>
+					</div>
+	
+					<div class="col-lg-4 col-md-6">
+						<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
+							<div class="d-flex align-items-center mb-3">
+								<i class="flaticon-art"></i>
+								<h4 class="ml-3">Property Tours</h4>
+							</div>
+							<p>An so vulgar to on points wanted. No rapturous resolving continued household northward gay he it otherwise</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>-->
+		<section class="work-area section-gap-top" id="work">
 		<div class="container">
 			<h3>Nik</h3>
 			<div class="row gallery-item">
