--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,10 @@
           </div>
           <nav id="nav-menu-container">
             <ul class="nav-menu">
-              <li class=""><a class="active" href="index.html">Personal</a></li>
+              <li class=""><a href="index.html">Personal</a></li>
               <li><a href="commercial.html">Commercial</a></li>
               <li><a href="price.html">Price</a></li>
-              <li><a href="contact.html">Contact</a></li>
+              <li><a class="active"  href="contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
