--- a/commercial.html
+++ b/commercial.html
@@ -56,8 +56,8 @@
 				</div>
 				<nav id="nav-menu-container">
 					<ul class="nav-menu">
-						<li class=""><a class="active" href="index.html">Personal</a></li>
-						<li><a href="commercial.html">Commercial</a></li>
+						<li class=""><a href="index.html">Personal</a></li>
+						<li><a class="active" href="commercial.html">Commercial</a></li>
 						<li><a href="price.html">Price</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
