--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 		</div>
 	</header>
 	 <!-- start banner Area -->
-	 <section class="banner-area-index relative">
+	 <section class="banner-area relative">
 		<div class="container">
 		  <div class="row d-flex align-items-center justify-content-center">
 			<div class="about-content col-lg-12">
