--- a/commercial.html
+++ b/commercial.html
@@ -15,7 +15,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Anatolii Sokolovskiy</title>
+	<title>Commercial</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Oswald:300,500,600|Roboto:400,700" rel="stylesheet">
 	<!--
@@ -29,15 +29,7 @@
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
 	<link rel="stylesheet" href="css/main.css">
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-205164689-1">
-	</script>
-	<script>
- 		 window.dataLayer = window.dataLayer || [];
-  		function gtag(){dataLayer.push(arguments);}
-  		gtag('js', new Date());
 
-  		gtag('config', 'UA-205164689-1');
-	</script>
 </head>
 
 <body>
@@ -77,50 +69,6 @@
 		</div>
 	  </section>
 	  <!-- End banner Area -->
-	  	
-	<!--	<section class="service-area section-gap-top">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="section-title text-center">
-							<h3>Our Services</h3>
-							<h2><span>What We Offer</span></h2>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4 col-md-6">
-						<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.0s">
-							<div class="d-flex align-items-center mb-3">
-								<i class="flaticon-shirt"></i>
-								<h4 class="ml-3">Fashion Photography</h4>
-							</div>
-							<p>An so vulgar to on points wanted. No rapturous resolving continued household northward gay he it otherwise</p>
-						</div>
-					</div>
-	
-					<div class="col-lg-4 col-md-6">
-						<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
-							<div class="d-flex align-items-center mb-3">
-								<i class="flaticon-water"></i>
-								<h4 class="ml-3">Nature Photgraphy</h4>
-							</div>
-							<p>An so vulgar to on points wanted. No rapturous resolving continued household northward gay he it otherwise</p>
-						</div>
-					</div>
-	
-					<div class="col-lg-4 col-md-6">
-						<div class="single-service wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
-							<div class="d-flex align-items-center mb-3">
-								<i class="flaticon-art"></i>
-								<h4 class="ml-3">Property Tours</h4>
-							</div>
-							<p>An so vulgar to on points wanted. No rapturous resolving continued household northward gay he it otherwise</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>-->
 		<section class="work-area section-gap-top" id="work">
 		<div class="container">
 			<h3>Nik</h3>
